--- a/src/index.html
+++ b/src/index.html
@@ -52,6 +52,7 @@
   </div>
   <div id="webCamView" class="webCamView myButton" style="display:none"></div>
   <div id="popup" class="popup" style="display:none"></div>
+  <div id="media-rtc3-controls" class="popup-left-box" style="display:none"></div>
 </body>
 
 </html>
