--- a/src/html-components/broadcaster.html
+++ b/src/html-components/broadcaster.html
@@ -1,5 +1,5 @@
-﻿<link href="styles/broadcaster.css" rel="stylesheet">
-<link href="styles/getHTMLMediaElement.css" rel="stylesheet">
+﻿<link href="styles/broadcaster.css" rel="preload">
+<link href="styles/getHTMLMediaElement.css" rel="preload">
 
 <script src="externals/jquery-3.3.1.slim.min.js"></script>
 <script src="externals/popper.min.js"></script>
