--- a/src/html-components/broadcaster.html
+++ b/src/html-components/broadcaster.html
@@ -1,9 +1,5 @@
-﻿<link href="styles/broadcaster.css" rel="preload">
-<link href="styles/getHTMLMediaElement.css" rel="preload">
-
-<script src="externals/jquery-3.3.1.slim.min.js"></script>
-<script src="externals/popper.min.js"></script>
-<script src="externals/bootstrap.min.js"></script>
+﻿<link href="styles/broadcaster.css" rel="stylesheet">
+<link href="styles/getHTMLMediaElement.css" rel="stylesheet">
 
 <div class="broadcaster" id="broadcasterUI">
     <h3 id="rtc3log" class="title">
@@ -15,8 +11,7 @@
         <button id="open-room" class="hide broadcastLabel">Open Room</button>
         <button id="join-room" class="hide broadcastLabel">Join Room</button>
         <button id="open-or-join-room" class="broadcastLabel" >Connect</button>
-
-        <br><br>
+        <br>
         <input type="text" id="input-text-chat" placeholder="Send Message" disabled class="blue-label chat-input">
         <button id="share-file" class="broadcastLabel share-btn" disabled>Share File</button>
         <button id="btn-leave-room" class="broadcastLabel leave-btn" disabled>Leave room</button>
