--- a/src/examples/platformer-single-player/ui/select-player.html
+++ b/src/examples/platformer-single-player/ui/select-player.html
@@ -1,11 +1,10 @@
+
 <div class="container">
-  <form action="" class="form-app">
+  <form action="" class="form-selectplayer">
     <ul class="nav">
       <li class="nav-item"><a href="javascript:void(0)" id="sing-in-tab">SELECT PLAYER</a></li>
     </ul>
-
     <span id="listOfPlayers" class="sing-in-tab"></span>
-
   </form>
   <button id="notify" class="link login-button"> maximumroulette.com </button>
 </div>
