--- a/src/examples/platformer-single-player/ui/player-board.html
+++ b/src/examples/platformer-single-player/ui/player-board.html
@@ -4,6 +4,22 @@
   margin: 0;
   height: inherit;
 }
+
+.leftPanelUni {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 10;
+  margin: auto 0;
+  padding: 0;
+  width: 15%;
+  height: 100%;
+  box-shadow: 0px 20px 70px -20px rgba(0, 0, 0, 0.8);
+  border-radius: 20px;
+  font-size: 80%;
+}
+
 </style>
 
 <div class="container player-board">
