--- a/src/examples/platformer-single-player/ui/select-player.html
+++ b/src/examples/platformer-single-player/ui/select-player.html
@@ -6,5 +6,11 @@
     </ul>
     <span id="listOfPlayers" class="sing-in-tab"></span>
   </form>
-  <button id="notify" class="link login-button"> maximumroulette.com </button>
+  <button id="notify" class="link login-button"> maximumroulette.com
+    <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
+    <div id="status"></div>
+  </button>
+    <button id="notify2" class="link login-button"> maximumroulette.com
+      <div class="fb-like" data-share="true" data-width="450" data-show-faces="true"></div>
+  </button>
 </div>
