--- a/src/examples/platformer-single-player/ui/player-board.html
+++ b/src/examples/platformer-single-player/ui/player-board.html
@@ -26,12 +26,11 @@
   <div  class="form-app">
     <ul class="nav noselect">
       <li class="nav-item noselect"> Lives : <span class="UIPlayerLives" id="UIPlayerLives">3</span></li>
-      <li class="nav-item active"> Time </li>
+      <!--li class="nav-item active"> [nidzica] </li-->
     </ul>
     <span id="error-msg-reg" class="myError"></span>
   </form>
   <button id="playAgainBtn" class="link login-button" disabled> Play again </button>
   <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
-  <button id="out-of-game" class="link login-button" disabled> Exit game </button>
 </div>
 
