--- a/src/examples/platformer-single-player/ui/player-board.html
+++ b/src/examples/platformer-single-player/ui/player-board.html
@@ -31,6 +31,6 @@
     <span id="error-msg-reg" class="myError"></span>
   </form>
   <button id="playAgainBtn" class="link login-button" disabled> Play again </button>
-  <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
+  <span id="error-msg-reg" class="myError"></span>
 </div>
 
