[NEW GAME TEMPLATE]
  - Objective :
   improve stream textures visual component system.

--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
   </div>
   <div id="webCamView" class="webCamView myButton" style="display:none"></div>
   <div id="popup" class="popup" style="display:none"></div>
-  <div id="media-rtc3-controls" class="popup-left-box" style="display:none"></div>
+  <div id="media-rtc3-controls" class="popup-right-box" style="display:none"></div>
 
   <!--div style="position: absolute;top: 40%;left:35%;z-index: 100000;"></div-->
 
