--- a/src/html-components/broadcaster.html
+++ b/src/html-components/broadcaster.html
@@ -1,4 +1,5 @@
-﻿<link href="styles/broadcaster.css" rel="stylesheet">
+﻿
+<link href="styles/broadcaster.css" rel="stylesheet">
 <link href="styles/getHTMLMediaElement.css" rel="stylesheet">
 
 <div class="broadcaster" id="broadcasterUI">
