[0.6.0]  Remove multiRTC2 Add MultiRTC3 WIP
 - To make better portable for mobile in aspect of networking.

--- a/src/html-components/coodinator.html
+++ b/src/html-components/coodinator.html
@@ -4,7 +4,7 @@
 
 <div class="broadcaster" id="broadcasterUI">
     <h3 id="rtc3log" class="title">
-        Networking
+        COORDINATOR
     </h3>
     <section class="make-fill">
         <input type="text" id="room-id" value="abcdef"
