--- a/src/index.html
+++ b/src/index.html
@@ -31,24 +31,7 @@
   </noscript>
   <div id="msgbox" class="log-network" style="display:none"></div>
   <div id="message-box" class="message-box" style="display:none"></div>
-  <div id="network-panel" class="log-network" style="display:none" renderRegime="normal">
-    <div id="log-chat" class="log-chat" style="display:block">
-    </div>
-    <input type="text" id="room-name" placeholder="Private ID" title="id.required" value="MAINSERVER" class="myButton"
-      style="width:169px;">
-    <input type="text" id="your-name" placeholder="Username" title="Recommended" class="myButton" style="width:170px;display:none;">
-    <button id="continue" title="Click to join the room!" class="myButton" style="display:none;" >continue</button>
-    <div id="who-is-typing" class="whoIsTyping"></div>
-    <input type="text" id="sender" placeholder="" value="Hello" style="position:absolute;bottom:0;left:0;width:100%;z-index: 100;"
-      class="myButton">
-      <button id="display-network-panel" title="Show/Hide chat box" class="myButton" style="display:block;" >hide</button>
-    <div id="logger" class="logger"></div>
-  </div>
-  <div id="media-rtc2-controls" class="controls" style="display:none">
-    <button id="allow-webcam" class="icon myButton" disabled title="Enable Your Webcam"></button>
-    <button id="allow-mic" class="icon myButton" disabled title="Enable Your Microphone"></button>
-    <button id="allow-screen" class="icon myButton" disabled title="Enable Your Screen"></button>
-    <button id="share-files" class="icon myButton" disabled title="Select and Share Your Files"></button>
+  <div id="data-rtc3-controls" class="log-network" style="display:none" renderRegime="normal">
   </div>
   <div id="webCamView" class="webCamView myButton" style="display:none"></div>
   <div id="popup" class="popup" style="display:none"></div>
