Replace multiRTC2 WIP
 Still no stable  real time handling in coordinator part. Coordinator is displaced for multiRTC2 used for data stream and active navigation player or any other object.

--- a/src/index.html
+++ b/src/index.html
@@ -31,7 +31,7 @@
   </noscript>
   <div id="msgbox" class="log-network" style="display:none"></div>
   <div id="message-box" class="message-box" style="display:none"></div>
-  <div id="data-rtc3-controls" class="log-network" style="display:none" renderRegime="normal">
+  <div id="data-rtc3-controls" class="log-data" style="display:none" renderRegime="normal">
   </div>
   <div id="webCamView" class="webCamView myButton" style="display:none"></div>
   <div id="popup" class="popup" style="display:none"></div>
