--- a/src/html-components/coordinator.html
+++ b/src/html-components/coordinator.html
@@ -11,17 +11,17 @@
           autocorrect=off autocapitalize=off size=20 class="blue-label"/>
         <button hidden id="open-room-data" class="hide broadcastLabel">Open Room</button>
         <button hidden id="join-room-data" class="hide broadcastLabel">Join Room</button>
-        <button id="open-or-join-room-data" class="broadcastLabel" >Connect</button>
+        <button hidden id="open-or-join-room-data" class="broadcastLabel" >Connect</button>
         <br>
         <input type="text" id="input-text-chat-data" placeholder="Send Message" disabled class="blue-label chat-input">
-        <button id="share-file-data" class="broadcastLabel share-btn" disabled>Share File</button>
-        <button id="btn-leave-room-data" class="broadcastLabel leave-btn" disabled>Leave room</button>
+        <button hidden id="share-file-data" class="broadcastLabel share-btn" disabled>Share File</button>
+        <button hidden id="btn-leave-room-data" class="broadcastLabel leave-btn" disabled>Leave room</button>
 
         <div id="room-urls-data" class="urlBox"></div>
 
         <div id="chat-container-data">
             <div id="file-container-data"></div>
-            <div class="chat-output"></div>
+            <div class="chat-output-data"></div>
         </div>
         <div id="videos-container-data"></div>
     </section>
