--- a/src/html-components/broadcaster.html
+++ b/src/html-components/broadcaster.html
@@ -23,7 +23,7 @@
             <div id="file-container"></div>
             <div class="chat-output"></div>
         </div>
-        <div id="videos-container"></div>
+        <div style="display:none" id="videos-container"></div>
     </section>
 
 </div>
