--- a/src/examples/platformer-single-player/ui/player-board.html
+++ b/src/examples/platformer-single-player/ui/player-board.html
@@ -19,18 +19,18 @@
   border-radius: 20px;
   font-size: 80%;
 }
-
 </style>
 
 <div class="container player-board">
   <div  class="form-app">
     <ul class="nav noselect">
-      <li class="nav-item noselect"> Lives : <span class="UIPlayerLives" id="UIPlayerLives">3</span></li>
+      <li class="nav-item noselect">Lives: <span class="UIPlayerLives" id="UIPlayerLives">3</span></li>
       <!--li class="nav-item active"> [nidzica] </li-->
     </ul>
     <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="playAgainBtn" class="link login-button" disabled> Play again </button>
+  <button id="playAgainBtn" class="link login-button" disabled>Play again</button>
+  <button id="soundOptionDom" class="link login-button">Sound:Off</button>
   <span id="error-msg-reg" class="myError"></span>
 </div>
 
