--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -14,8 +14,8 @@
     </ul>
     <span id="error-msg-reg" class="myError"></span>
   </form>
-  <button id="playAgainBtn" class="link login-button" disabled> Play again </button>
+  <button id="playAgainBtn" class="link login-button" disabled>Play again</button>
+  <button id="soundOptionDom" class="link login-button">Sound:Off</button>
   <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
   <button id="out-of-game" class="link login-button" disabled> Exit game </button>
 </div>
-
