--- a/src/examples/basket-ball-chat/ui/player-board.html
+++ b/src/examples/basket-ball-chat/ui/player-board.html
@@ -18,6 +18,8 @@
     <button id="out-of-game" class="link login-button" disabled> Exit game </button>
     </div>
 
-    <img src="imgs/android-icon.png" />
+    <div>
+      <img width="70px" src="imgs/android-icon.png" />
+    </div>
 
 </div>
