[0.6.24] Text component added prop text
Improved video chat example

--- a/src/examples/platformer/ui/select-player.html
+++ b/src/examples/platformer/ui/select-player.html
@@ -1,4 +1,3 @@
-
 <div class="container">
   <form action="" class="form-selectplayer">
     <ul class="nav">
@@ -6,11 +5,13 @@
     </ul>
     <span id="listOfPlayers" class="sing-in-tab"></span>
   </form>
-  <button id="notify" class="link login-button"> maximumroulette.com
+  <button id="notify" class="link login-button">
+    maximumroulette.com
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button>
     <div id="status"></div>
   </button>
-    <button id="notify2" class="link login-button"> maximumroulette.com
-      <div class="fb-like" data-share="true" data-width="450" data-show-faces="true"></div>
+  <button id="notify2" class="link login-button">
+    maximumroulette.com
+    <div class="fb-like" data-share="true" data-width="450" data-show-faces="true"></div>
   </button>
 </div>
