APP IS ON NPM RUN DEV WEBPACK - prepare for integration with SAFIR-KICKSTAR
   COORDINATOR DISABLED  - SAFIR AND ROCKETCRATSERVER WILL HANDLE INTER SHARE CHANNEL DATA RELATED ON MULTIPLAYER ....

--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
   <link rel="icon" type="image/png" sizes="96x96" href="imgs/favicon-96x96.png">
   <link rel="icon" type="image/png" sizes="192x192" href="imgs/android-icon.png">
   <link rel="icon" href="styles/favicon.ico" type="image/x-icon">
-  <intercept-url pattern="styles/favicon.ico" access="ROLE_ANONYMOUS"> </intercept-url>
+  <!-- <intercept-url pattern="styles/favicon.ico" access="ROLE_ANONYMOUS"> </intercept-url> -->
   <meta name="msapplication-TileImage" content="imgs/ms-icon-310x310.png">
   <title>TS Game engine</title>
 </head>
