--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -13,7 +13,8 @@
       <li class="nav-item active"> Time </li>
     </ul>
     <span id="error-msg-reg" class="myError"></span>
-  </form>
+  </div>
+  <div id="currentPlayers" class="log-data">CURR PLAYERS</div>
   <button id="playAgainBtn" class="link login-button" disabled>Play again</button>
   <button id="soundOptionDom" class="link login-button">Sound: Off</button>
   <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
