--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -1,4 +1,3 @@
-
 <style>
 .player-board {
   margin: 0;
@@ -7,10 +6,9 @@
 </style>
 
 <div class="container player-board">
-  <div  class="form-app">
+  <div  class="form-app myZoom">
     <ul class="nav noselect">
-      <li class="nav-item noselect"> Lives : <span class="UIPlayerLives" id="UIPlayerLives">3</span></li>
-      <li class="nav-item active"> Time </li>
+      <li class="nav-item noselect">Lives: <span class="UIPlayerLives" id="UIPlayerLives">3</span></li>
     </ul>
     <span id="error-msg-reg" class="myError"></span>
   </div>
