--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -12,9 +12,9 @@
     </ul>
     <span id="error-msg-reg" class="myError"></span>
   </div>
-  <div id="currentPlayers" class="log-data">CURR PLAYERS</div>
-  <button id="playAgainBtn" class="link login-button" disabled>Play again</button>
-  <button id="soundOptionDom" class="link login-button">Sound: Off</button>
+  <div id="currentPlayers" class="log-data">PLAYERS</div>
+  <button id="playAgainBtn" class="link ui-button" disabled>Play again</button>
+  <button id="soundOptionDom" class="link ui-button">Sound: Off</button>
+  <button id="out-of-game" class="link ui-button" disabled> Exit game </button>
   <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
-  <button id="out-of-game" class="link login-button" disabled> Exit game </button>
 </div>
