Mobile new opti

--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -6,7 +6,7 @@
 </style>
 
 <div class="container player-board">
-  <div  class="form-app myZoom">
+  <div  class=" myZoom">
     <ul class="nav noselect">
       <li class="nav-item noselect">Lives: <span class="UIPlayerLives" id="UIPlayerLives">3</span></li>
     </ul>
