--- a/src/examples/platformer/ui/player-board.html
+++ b/src/examples/platformer/ui/player-board.html
@@ -13,7 +13,7 @@
     <span id="error-msg-reg" class="myError"></span>
   </div>
   <div id="currentPlayers" class="log-data">PLAYERS</div>
-  <button id="playAgainBtn" class="link ui-button" disabled>Play again</button>
+  <button id="playAgainBtn" class="link ui-button"  >Play again</button>
   <button id="soundOptionDom" class="link ui-button">Sound: Off</button>
   <button id="out-of-game" class="link ui-button" disabled> Exit game </button>
   <span id="error-msg-reg" class="myError">Cost you 10 points.</span>
