--- a/src/html-components/broadcaster2.html
+++ b/src/html-components/broadcaster2.html
@@ -1,3 +1,4 @@
+<link href="styles/broadcaster2.css" rel="stylesheet">
 <div id="netHeader" class="">
 	<button id="netHeaderTitle" class="btn btn-lg btn-success">HIDE</button>
 
