First working point only tested on platformer/multiplayer

--- a/src/html-components/broadcaster2.html
+++ b/src/html-components/broadcaster2.html
@@ -6,7 +6,7 @@
 		<div id="video-container" class="col-md-12"></div>
 		<div id="session-header">
 			<h2 id="session-title"></h2>
-			<input class="btn btn-sm btn-danger" type="button" id="buttonCloseSession" value="Close session">
+			<!-- <input class="btn btn-sm btn-danger" type="button" id="buttonCloseSession" value="Close session"> -->
 			<input class="btn btn-sm btn-danger" type="button" id="buttonLeaveSession" value="Leave session">
 			<div class="vertical-separator-top" style="display:none;"></div>
 			<input class="form-control" id="forceValue" type="text" onkeyup="checkBtnsForce()" style="display:none;">
