--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
 	</div>
 	<div id="webCamView" class="webCamView myButton" style="display:none"></div>
 	<div id="popup" class="popup" style="display:none"></div>
-	<div id="matrix-net" style="display:none"></div>
+	<div id="matrix-net" style="display:none;overflow: hidden;"></div>
 </body>
 
 </html>
